Prevent genuine assets from being blocked by adblockers
The myriad of adblockers around the world do something called
Cosmetic Filtering which basically resize DOM elements to 0 width
0 height so that they are not visible to the user.

Using a class `sponsor-logo` on the container for the sponsor logo
made them prone to being hidden by adblockers.

This PR practically renames all occurences of `sponsor` in the
rendered HTML DOM.

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -474,10 +474,10 @@ body {
     }
   }
 
-  // Sponsor section styles
-  .sponsor-section {
+  // supporter section styles
+  .supporter-section {
     position: relative;
-    .sponsor{
+    .supporter{
       margin-top: 1rem;
     }
     .level-heading {
@@ -498,7 +498,7 @@ body {
       flex-direction: row;
       flex-wrap: wrap;
 
-      .sponsor-logo {
+      .supporter-logo {
         cursor: pointer;
         img {
           margin-top: 1rem;
